<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green"
    android:orientation="vertical"
    tools:context=".Maindashboard" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-95dp">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="160dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/meditaionmusic"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="16dp"
                android:text="@string/main_text4"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="16dp"
                android:text="@string/main_text7"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/main_button4"
                android:layout_width="195dp"
                android:layout_height="33dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/background_darkgreen"
                android:text="@string/main_btn2" />

        </LinearLayout>

        <TextView
            android:id="@+id/main_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_text3"
            android:textColor="@color/signup_btn_green"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/main_button1"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_text2"
            app:layout_constraintVertical_bias="0.028" />

        <Button
            android:id="@+id/main_button1"
            android:layout_width="129dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_darkgreen"
            android:text="@string/main_btn1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.943"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="117dp"
            android:layout_height="110dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/main_text2"
            android:layout_width="236dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:text="@string/mainhi_text2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_text1" />

        <TextView
            android:id="@+id/main_text1"
            android:layout_width="238dp"
            android:layout_height="52dp"
            android:layout_marginTop="44dp"
            android:text="@string/mainhi_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="96dp">

        </TableLayout>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.309">

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"

                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_darkgreen"

                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/icon1main" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="85dp"
                android:layout_height="88dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"

                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_darkgreen"

                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="72dp"
                    android:layout_height="73dp"
                    android:layout_margin="9dp"
                    android:layout_marginStart="9dp"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="9dp"
                    android:layout_marginRight="9dp"
                    app:srcCompat="@drawable/main_icon2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"

                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_darkgreen"

                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="77dp"
                    android:layout_height="77dp"
                    android:layout_margin="9dp"
                    app:srcCompat="@drawable/main_icon3" />
            </LinearLayout>
        </TableRow>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="363dp"
            android:layout_height="162dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/medi2"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableRow">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="16dp"
                android:text="@string/main_text6"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="16dp"
                android:text="@string/main_text5"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/main_button3"
                android:layout_width="207dp"
                android:layout_height="34dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_darkgreen"
                android:text="@string/main_btn2" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
